--- a/style.css
+++ b/style.css
@@ -1,21 +1,40 @@
-/* *{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  }
 
-    background-color: rgba(255,255,255,0.5);
-    
-} */
+  @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap");
 
-.container{
-    position: relative;
-    width: 450px;
-    height: 450px;
-    align-items: center;
-    justify-content: center;
+  body {
+    width: 100vw;
+    height: 100vh;
     display: flex;
-    /* flex-direction: column; */
-    /* background-color: rgba(255,255,255,0.5); */
-    border-radius: 25px;
+    justify-content: center;
+    align-items: center;
+    background: linear-gradient(to right, #c5e1ef, #fff);
+  }
+
+  #waImg{
+    width: 50px;
+  }
+#waText{
+    font-size: 22px;
+    margin-left: 20px;
+}
+.card-text{
+    font-size: 24px;
+    font-family: cursive;
+    color: darkgray;
 
 }
+.card{
+    border-radius: 10%;
+    box-shadow: 2px 6px 8px 0 rgba(22, 22, 26, 0.18);
+    background: linear-gradient(to right, #c5e1ef, #fff);
+}
+.card-title{
+    color: #497ce9; !important
+}
+
