--- a/style.css
+++ b/style.css
@@ -13,28 +13,32 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background: linear-gradient(to right, #c5e1ef, #fff);
+    background: linear-gradient(to right, #e3e8cc, #fff);
   }
 
   #waImg{
     width: 50px;
   }
 #waText{
-    font-size: 22px;
+    font-size: 30px;
     margin-left: 20px;
 }
 .card-text{
     font-size: 24px;
     font-family: cursive;
     color: darkgray;
+    font-weight: bold;
 
 }
 .card{
-    border-radius: 10%;
+    max-width: 450px;
+    border-radius: 25%;
     box-shadow: 2px 6px 8px 0 rgba(22, 22, 26, 0.18);
     background: linear-gradient(to right, #c5e1ef, #fff);
 }
 .card-title{
-    color: #497ce9; !important
+    color: #497ce9 !important; 
+    font-size: 27px;
+    
 }
 
