commiting text color change

--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@
 .card-text{
     font-size: 24px;
     font-family: cursive;
-    color: darkgray;
+    color: #666d7e;
     font-weight: bold;
 
 }
